basic layout of the yelp study space selector and fixed weird UI bug with scrollbar

--- a/BuStudentAssistant/Components/Layout/Sidebar.razor.css
+++ b/BuStudentAssistant/Components/Layout/Sidebar.razor.css
@@ -13,7 +13,6 @@ html {
   }
   
 body {
-    min-height: 150vh; /* Adjust this value as needed to make the page taller */
     margin: 0;
     padding: 0;
     background: linear-gradient(180deg, white 50%, #E77A7A 100%);
